test_src/compiler_errors/vars/UndefinedVarError1.b
class UndefinedVarError1 {
    void test() {
        println(foo);
    }
}
